[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/props/light/torch.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/materials/wall.material" type="Material" id=2]
[ext_resource path="res://scenes/prefab/door.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/materials/floor.material" type="Material" id=4]
[ext_resource path="res://assets/materials/ceiling.material" type="Material" id=5]
[ext_resource path="res://scripts/prefab/prefab.gd" type="Script" id=6]
[ext_resource path="res://scenes/prefab/connection_node.tscn" type="PackedScene" id=7]

[sub_resource type="NavigationMesh" id=1]
vertices = PoolVector3Array( -0.2, 0.4, -7.4, -7.4, 0.4, -7.4, -7.4, 0.4, -0.2, -0.2, 0.4, 7.3, 7.3, 0.4, 7.3, 7.3, 0.4, -0.2, -7.4, 0.4, -0.2, -7.4, 0.4, 7.3, -0.2, 0.4, 7.3, 7.3, 0.4, -0.2, 7.3, 0.4, -7.4, -0.2, 0.4, -7.4 )
polygons = [ PoolIntArray( 1, 0, 2 ), PoolIntArray( 2, 0, 5 ), PoolIntArray( 2, 5, 3 ), PoolIntArray( 3, 5, 4 ), PoolIntArray( 8, 7, 6 ), PoolIntArray( 11, 10, 9 ) ]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 16, 16 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 8, 0, 8 )

[sub_resource type="BakedLightmapData" id=4]
bounds = AABB( -8.1, -2.1, -8.1, 16.2, 4.2, 16.2 )
cell_space_transform = Transform( 3.95062, 0, 0, 0, 3.95062, 0, 0, 0, 3.95062, 32, 8.2963, 32 )
cell_subdiv = 7
octree = PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 17, 6, 12 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 7, 2, 7 )

[node name="start_room" type="Spatial"]
script = ExtResource( 6 )
type = "Room"
spawn_enemies = true
navigation = NodePath("geometry/Navigation")

[node name="connection_points" type="Spatial" parent="."]

[node name="0" parent="connection_points" instance=ExtResource( 7 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -8, 0, 0 )

[node name="door" parent="connection_points/0" instance=ExtResource( 3 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )

[node name="1" parent="connection_points" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8 )

[node name="door" parent="connection_points/1" instance=ExtResource( 3 )]
transform = Transform( -3.02394e-06, 0, 1, 0, 1, 0, -1, 0, -3.02394e-06, 7.15256e-07, 0, -4.76837e-07 )

[node name="2" parent="connection_points" instance=ExtResource( 7 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 8, 0, 0 )

[node name="door" parent="connection_points/2" instance=ExtResource( 3 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )

[node name="spawn_points" type="Spatial" parent="."]

[node name="0" type="Position3D" parent="spawn_points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.2633, 0, 5.9834 )

[node name="1" type="Position3D" parent="spawn_points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.2064, 0, -4.548 )

[node name="2" type="Position3D" parent="spawn_points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.3997, 0, -5.1808 )

[node name="3" type="Position3D" parent="spawn_points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6666, 0, 4.8391 )

[node name="geometry" type="Spatial" parent="."]

[node name="Navigation" type="Navigation" parent="geometry"]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="geometry/Navigation"]
navmesh = SubResource( 1 )

[node name="Floor" type="StaticBody" parent="geometry/Navigation/NavigationMeshInstance"]

[node name="mesh" type="MeshInstance" parent="geometry/Navigation/NavigationMeshInstance/Floor"]
use_in_baked_light = true
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="geometry/Navigation/NavigationMeshInstance/Floor"]
shape = SubResource( 3 )

[node name="Ceiling" type="StaticBody" parent="geometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )

[node name="mesh" type="MeshInstance" parent="geometry/Ceiling"]
transform = Transform( 1, 0, 0, 0, -1, 3.89414e-07, 0, -3.89414e-07, -1, 0, 0, 0 )
material_override = ExtResource( 5 )
use_in_baked_light = true
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="geometry/Ceiling"]
shape = SubResource( 3 )

[node name="Wall" type="CSGBox" parent="geometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -8 )
material_override = ExtResource( 2 )
use_in_baked_light = true
use_collision = true
width = 16.0
height = 4.0
depth = 0.001

[node name="Door" type="CSGBox" parent="geometry/Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
operation = 2
width = 4.0

[node name="Wall2" type="CSGBox" parent="geometry"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8, 2, 0 )
material_override = ExtResource( 2 )
use_in_baked_light = true
use_collision = true
width = 16.0
height = 4.0
depth = 0.001

[node name="Door" type="CSGBox" parent="geometry/Wall2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
operation = 2
width = 4.0

[node name="Wall3" type="CSGBox" parent="geometry"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 2, 0 )
material_override = ExtResource( 2 )
use_in_baked_light = true
use_collision = true
width = 16.0
height = 4.0
depth = 0.001

[node name="Door" type="CSGBox" parent="geometry/Wall3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
operation = 2
width = 4.0

[node name="Wall4" type="CSGBox" parent="geometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 8 )
material_override = ExtResource( 2 )
use_in_baked_light = true
use_collision = true
width = 16.0
height = 4.0
depth = 0.001

[node name="torch" parent="geometry" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.881, 1.544, 1.265 )

[node name="torch2" parent="geometry" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88107, 1.5436, -1.18503 )
visible = false

[node name="torch3" parent="geometry" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.88348, 1.5436, -1.12977 )

[node name="torch4" parent="geometry" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.88966, 1.5436, 1.26493 )
visible = false

[node name="torch5" parent="geometry" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.17856, 1.5436, -3.88186 )

[node name="torch6" parent="geometry" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.216, 1.544, -3.882 )
visible = false

[node name="torch7" parent="geometry" instance=ExtResource( 1 )]
transform = Transform( 6.0916e-06, 0, -1, 0, 1, 0, 1, 0, 6.0916e-06, -1.21614, 1.5436, 3.88341 )
visible = false

[node name="torch8" parent="geometry" instance=ExtResource( 1 )]
transform = Transform( 6.0916e-06, 0, -1, 0, 1, 0, 1, 0, 6.0916e-06, 1.17856, 1.5436, 3.88959 )

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
bake_quality = 2
bake_hdr = true
bake_extents = Vector3( 8.1, 2.1, 8.1 )
light_data = SubResource( 4 )

[node name="visible_area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="visible_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
shape = SubResource( 5 )

[node name="inside_area" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="inside_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 6 )
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="body_entered" from="visible_area" to="." method="_on_visible_area_body_entered"]
[connection signal="body_exited" from="visible_area" to="." method="_on_visible_area_body_exited"]
[connection signal="body_entered" from="inside_area" to="." method="_on_inside_area_body_entered"]
